--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
@@ -20,6 +21,7 @@
     "@sendgrid/mail": "^7.2.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.28"
   }
 }
