--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "moment": "^2.27.0",
-    "mongoose": "^5.9.28"
+    "mongoose": "^5.9.28",
+    "uid": "^1.0.0"
   }
 }
