--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "express": "^4.17.1",
     "moment": "^2.27.0",
     "mongoose": "^5.9.28",
-    "uid": "^1.0.0"
+    "node-fetch": "^2.6.0"
   }
 }
