--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.17.1",
     "moment": "^2.27.0",
     "mongoose": "^5.9.28",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "node-schedule": "^1.3.2",
+    "telnyx": "^1.10.0"
   }
 }
